--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <p>Мэдээ</p>
               <i class="fa-solid fa-chevron-down" style="color: #000000"></i>
             </div>
+            <div class="example"><p>wow</p></div>
             <div class="drop-content">
               <ul>
                 <li class="drop-options">
